OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)


5.4.8 (2018-08-??)
------------------
- OC1/OC23: getVatRateLookupByTotalLineType() did not return any tax class id.
- ALL: Handle the case where a vat rate lookup results in multiple vat rates.
- ALL: If a parent line must be handled by the strategy phase , ensure that the
  child lines also are handled by the strategy phase if they have 'vat rate
  source' = 'parent'.

5.4.7 (2018-07-20)
------------------
- ALL: Added an option that covers how to handle missing amounts.
- OC (bug/feature?): Better handling of total lines (e.g. shipping) regarding
  whether the amount is inc or ex vat and vat rate lookup for those lines.
- ALL (bug): Option "Send consumer client records to Acumulus." removes country
  code before it is used to determine the vat type.
- ALL (bug): goods outside EU may use vat type = 1 when you can't or don't want
  to prove that the goods will leave the EU.
- ALL (bug): improved handling of costprice and margin lines.
- ALL (bug): Use host name instead of shop software name when creating
  fictitious email addresses.

5.4.6 (2018-07-10 JOO)
5.4.6 (2018-07-09 OC)
---------------------
- JOO: com_acumulusInstallerScript.php still contained references to the old
  library path and defined a psr0 namespace instead of a psr4 one.
- OC: Warning: lsprintf(): Too few arguments in Opencart/Shop/AcumulusEntryManager.php
  on line 93. Warning: mysqli::Query(): Empty query.

5.4.5 (2018-07-04)
------------------
- ALL: Notice: Undefined index: nature_shop in ConfigForm.php on line 85.

5.4.4 (2018-06-05)
------------------
- ALL: better filling and handling of field nature, especially for non-item
  fields (shipping costs, payment fee).